--- a/public/css/style.css
+++ b/public/css/style.css
@@ -561,7 +561,7 @@ h6 {
   left: 0px;
   right: 0px;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.2);
+  /* background-color: rgba(0, 0, 0, 0.2); */
 }
 .grax_tm_hero .content {
   width: 100%;
